clusters/cobbler/mindwtr/mindwtr.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mindwtr
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mindwtr
  name: mindwtr
  namespace: mindwtr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mindwtr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mindwtr
    spec:
      containers:
      - image: ghcr.io/dongdongbh/mindwtr-cloud:1.3.4
        name: mindwtr-cloud
        volumeMounts:
          - name: data
            mountPath: /app/cloud_data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mindwtr-data-longhorn
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mindwtr
  name: mindwtr
  namespace: mindwtr
spec:
  ports:
  - port: 8787
    protocol: TCP
    targetPort: 8787
  selector:
    app: mindwtr
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mindwtr-http
  namespace: mindwtr

spec:
  parentRefs:
    - name: internal
      namespace: internal-gateway
  hostnames:
    - mindwtr.cobbler.gordns.net
    - mindwtr-api.cobbler.gordns.net
  rules:
    - backendRefs:
        - name: mindwtr
          port: 8787
